src/app/(i18n)/blog/[idx]/style.module.scss
@use "@bigtablet/design-system/scss/token" as token;

.blog_detail {
  width: 100%;
  padding: token.$spacing_2xl 0 token.$spacing_3xl;
  max-width: 960px;
  margin: 0 auto;
  color: token.$text_normal;

  &_loading,
  &_empty {
    @include token.body_regular;
    font-size: token.$font_size_sm;
    color: token.$text_subtle;
    text-align: center;
    margin-top: token.$spacing_2xl;
  }

  &_body {
    width: 100%;
  }

  &_title {
    @include token.heading_2;
    font-size: token.$font_size_2xl;
    color: token.$text_strong;
    margin-bottom: token.$spacing_sm;
  }

  &_meta {
    display: flex;
    align-items: center;
    gap: token.$spacing_sm;
    color: token.$text_subtle;
    font-size: token.$font_size_xs;
    margin-bottom: token.$spacing_md;
  }

  &_time {
    @include token.body_regular;
  }

  &_dot {
    opacity: 0.6;
  }

  &_views {
    @include token.body_medium;
  }

  &_hero {
    position: relative;
    width: 100%;
    aspect-ratio: 16 / 9;
    border-radius: token.$radius_lg;
    overflow: hidden;
    background: token.$color_background_secondary;
    border: 1px solid token.$color_border;
    margin: token.$spacing_lg 0 token.$spacing_xl;

    img {
      object-fit: cover;
      width: 100%;
      height: 100%;
      display: block;
    }
  }

  &_content {
    @include token.body_regular;
    font-size: token.$font_size_md;
    color: token.$text_normal;
    white-space: pre-wrap;

    h1,
    h2,
    h3 {
      margin-top: token.$spacing_2xl;
      margin-bottom: token.$spacing_md;
      font-weight: token.$font_weight_bold;
      color: token.$text_strong;
    }

    p {
      margin-bottom: token.$spacing_lg;
    }

    img {
      display: block;
      max-width: 100%;
      height: auto;
      border-radius: token.$radius_md;
      margin: token.$spacing_2xl auto;
      border: 1px solid token.$color_border;
    }
  }
}

